--- a/src/template.html
+++ b/src/template.html
@@ -1,3 +1,8 @@
+<!-- 
+created a birthday template for puja to hijack her birthday
+source code : github.com/rockreyad
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -139,8 +144,8 @@
 
     <div class="hallway">
       <p class="hall-text">Hey!</p>
-      <p class="hall-text">Maybe it's a bit late to move in the hallway,</p>
-      <p class="hall-text">Things are creepy here...</p>
+      <p class="hall-text">Maybe it's a quite late and dark night to move outside,</p>
+      <p class="hall-text">Things are creepy here , tomorrow we have exam...</p>
       <p class="hall-text">I think we should go back inside.</p>
     </div>
 
